--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<java.version>1.8</java.version>
 
 		<!-- LIBRARIES -->
-		<guava.version>26.0-jre</guava.version>
+		<guava.version>29.0-jre</guava.version>
 		
 		<!-- PLUGINS -->
 		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -33,7 +33,6 @@
 	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-		<testSourceDirectory>test</testSourceDirectory>
 		
 		<plugins>
 			<plugin>
@@ -59,7 +58,7 @@
 							<shadedArtifactAttached>true</shadedArtifactAttached>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>forg/treesum/TreeSummer</mainClass>
+									<mainClass>forg/treesum/Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
